Fix spacing variables

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
 }
 
 .dashboard {
-    padding: 1.5rem;
+    padding: var(--spacing-300);
     display: grid;
     grid-template-areas:
     "user-section"
@@ -318,7 +318,7 @@ body {
 
     .timeframe-selector__option {
         text-align: left;
-        padding: 0 2rem;
+        padding: 0 var(--spacing-400);
     }
 
     .user-section {
